--- a/section9/server/package.json
+++ b/section9/server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^5.5.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "morgan": "^1.10.0",
+    "section9": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
